[build-system]
requires = [ "setuptools >= 61.0", "wheel>=0.37" ]
build-backend = "setuptools.build_meta"

[project]
name = "segram"
requires-python = ">=3.11"
version = "0.0.0"
authors = [{name = "Szymon Talaga", email = "stalaga@protonmail.com"}]
readme = "README.rst"
dependencies = [
    "spacy>=3.4,<=3.5",
    "spacy-experimental==0.6.1",
    "more-itertools>=8.0"
]

[project.optional-dependencies]
test = [
    "ipython",
    "ipdb",
    "pylint>=2.14",
    "pytest>=7.2"
]

[project.entry-points.spacy_factories]
segram = "segram.nlp.pipeline.factories:create_base"

[tool.setuptools]
include-package-data = true
package-dir = { segram = "segram" }

[tool.setuptools.packages.find]
where = ["segram"]

[tool.setuptools.package-data]
nlp = ["*.json", ".json.gz"]

[tool.pytest.ini_options]
minversion = "7.2"
addopts = [
    "--verbose",
    "--tb=no",
    "--capture=no",
    "--pdbcls=IPython.terminal.debugger:Pdb",
]
testpaths = [
    "tests"
]
python_files = ["test_*.py", "benchmark_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
