[metadata]
name = segram
description = Agent-oriented semantic grammar
author = Szymon Talaga
author_email = stalaga@protonmail.com
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    nlp
    semantic grammar
project_urls =
    Source = https://github.com/sztal/segram

[options]
zip_safe = false
python_requires = >=3.9
tests_require =
    pylint>=2.14
    pytest>=7.2
    ipdb>=0.13
    ipython>=8.7
test_suite = tests
package_dir =
    segram = segram
packages = find:
include_package_data = true

[options.package_data]
* = patterns.json

[options.entry_points]
spacy_factories =
    segram = segram.nlp.spacy.pipeline.factories:create_base


[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:segram/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[wheel]
universal = 1

[aliases]
test = pytest
